<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreationBinder</string>
    <string name="app_label_empty"> </string>
    <string name="app_event_name">サンシャインクリエイション65</string>
    <string name="app_tutorial_welcome_search_circle">サンクリのお気に入りサークルを探そう！</string>
    <string name="app_tutorial_welcome_add_checklist">お気に入りサークルを管理出来る！</string>
    <string name="app_tutorial_initialize_about">@string/common_about</string>
    <string name="app_tutorial_initialize_progress">初期化しています</string>
    <string name="app_this_is_un_official_application">当アプリは「クリエイション事務局」公式のアプリではありません。</string>
    <string name="app_update_schedule_label">サンクリ 2014 Winter に向けての更新予定</string>
    <string name="app_update_schedule_item">端末間でチェックリストを共有する\nチェックリストをエクスポートする\n過去の開催イベントのチェックリストを保持する</string>
    <string name="app_tutorial_initialize_complete">お気に入りサークルを探す！</string>
    <string name="app_circle_search_keyword_hint">サークル名 or ペンネーム</string>
    <string name="app_circle_search_navigation_back">前に戻る</string>
    <string name="app_circle_search_navigation_forward">次へ進む</string>

    <string name="app_creation_homepage_top">http://www.creation.gr.jp/</string>

    <string name="app_peti_only_nmnl_name">No µ\'sic, No Live!</string>
    <string name="app_peti_only_nmnl_description">「ラブライブ！ School idol project」ジャンル</string>
    <string name="app_peti_only_omufes_name">おむ☆フェス</string>
    <string name="app_peti_only_omufes_description">おむつっ娘メイン</string>


    <string name="app_enjoy_creation_label">サンクリを楽しもう！</string>
    <string name="app_enjoy_creation_peti_only_label">プチオンリー</string>
    <string name="app_enjoy_creation_peti_only_description">イベントの会場内でスペースを集合配置し、参加サークルの手によって様々な企画を行うことが出来るイベント内企画です。</string>
    <string name="app_enjoy_creation_news_label">クリエイションニュース</string>
    <string name="app_enjoy_creation_news_description">会場内で5〜8枚ほど(枚数は開催時によってまちまち)、「クリエイションニュース」が発行されます。\n各ホール入り口そばや、クリエイション事務局本部の近くに設置されている事が多いです。</string>
    <string name="app_enjoy_creation_rakugaki_corner_label">ラクガキコーナー</string>
    <string name="app_enjoy_creation_rakugaki_corner_description">各ホールの壁や柱に大きな紙が貼られています。\nホール毎にテーマが設定されており、誰でもラクガキ可能な自由な場で毎回たくさんのラクガキが寄せられています。</string>
    <string name="app_enjoy_creation_survey_label">アンケート</string>
    <string name="app_enjoy_creation_survey_description">クリエイション事務局では参加者からの声を集めています。\n当日の感想の他に、次回開催時のカタログにコメントが掲載される項目や、アンケートに答える事でイラスト色紙等の抽選権の獲得等もあります。\n詳細はカタログや当日のアナウンスにてご確認ください。</string>
    <string name="app_enjoy_creation_about_catalog_label">カタログについて</string>
    <string name="app_enjoy_creation_about_catalog_description">その他注意事項やイベント内イベントの詳細等はカタログに掲載されています。\nカタログは入場証にもなっておりますので、入場の前に必ず1人1冊ご購入ください。</string>
    <string name="app_enjoy_creation_about_catalog_link">http://www.creation.gr.jp/common/visitor.html</string>

    <!-- Preference -->
    <string name="app_pref_app_storage">pref_app_storage</string>
    <string name="app_pref_app_storage_is_initialize">pref_app_storage_is_initialize</string>

    <!-- Fragment -->
    <string name="fragment_tag_data_initialize">fragment_tag_data_initialize</string>
    <string name="common_app_name">CircleBinder</string>
    <string name="common_action_open_browser">WEBブラウザで開く</string>
    <string name="common_action_share">シェアする</string>
    <string name="common_enjoy_event">イベントを楽しむ</string>
    <string name="common_open_event_map">会場周辺のマップ</string>
    <string name="common_circle_search">出展サークルを探す</string>
    <string name="common_circle_link_homepage">ホームページ</string>
    <string name="common_circle_link_pixiv">pixiv</string>

    <!-- 汎用 -->
    <string name="common_all">全て</string>

    <!-- その他・アプリ情報など(本筋の機能とは直接関係のないもの) -->
    <string name="common_about">このアプリについて</string>
    <string name="common_change_log">更新履歴</string>
    <string name="common_change_log_publish_date_format">%1$s バージョン%2$s</string>
    <string name="common_open_source_license">オープンソースライセンス</string>
    <string name="common_send_feedback_by_mail">メールで意見を送る！</string>
    <string name="common_send_feedback_wish_me_luck">応援する</string>
    <string name="common_send_feedback_description">メールアプリからご意見,ご感想,不具合報告など、お気軽にお寄せください。
今後のアップデートの参考にさせていただきます！</string>
    <string name="common_twitter_official_account_label">Twitter公式アカウント</string>
    <string name="common_twitter_official_account_screen_name">\@circlebinder</string>
    <string name="common_twitter_official_account_url">https://twitter.com/circlebinder</string>
    <string name="common_twitter_official_hash_tag_label">ハッシュタグ</string>
    <string name="common_twitter_official_hash_tag_name">\#circlebinder</string>
    <string name="common_twitter_official_hash_tag_url">https://twitter.com/search?q=%23circlebinder&amp;src=typd</string>
    <string-array name="common_contact_mail_addresses">
        <item >circlebinder@gmail.com</item>
    </string-array>
    <string name="common_contact_mail_subject">【ご意見・ご要望】%sに関して</string>
    <!--suppress CheckTagEmptyBody -->
    <string name="common_contact_mail_body"></string>


</resources>
