<?xml version="1.0" encoding="utf-8"?>
    <!-- android.support.v7.widget.CardView -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/common_spacer_large"
        android:background="#FFFFFF"
        >

        <TextView
            style="@style/CommonSectionHeaderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_tutorial_welcome_search_circle"
            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/tutorial_add_checklist"
            android:contentDescription="@string/app_tutorial_welcome_add_checklist"
            />

        <TextView
            style="@style/CommonSectionHeaderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_tutorial_initialize_about"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacer_x_small"
            android:paddingLeft="@dimen/common_spacer_middle"
            android:paddingRight="@dimen/common_spacer_middle"
            android:text="@string/app_this_is_un_official_application"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacer_middle"
            android:paddingLeft="@dimen/common_spacer_middle"
            android:paddingRight="@dimen/common_spacer_middle"
            android:text="@string/common_send_feedback_description"
            />

        <TextView
            style="@style/CommonSectionHeaderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_twitter_official_account_label"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_spacer_middle"
            android:paddingRight="@dimen/common_spacer_middle"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_spacer_x_small"
                android:text="@string/common_twitter_official_account_label"
                />

            <TextView
                android:id="@+id/common_view_contact_twitter_official_account_screen_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_twitter_official_account_screen_name"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_spacer_middle"
            android:paddingRight="@dimen/common_spacer_middle"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_spacer_x_small"
                android:text="@string/common_twitter_official_hash_tag_label"
                />

            <TextView
                android:id="@+id/common_view_contact_twitter_official_hash_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_twitter_official_hash_tag_name"
                />

        </LinearLayout>

        <TextView
            style="@style/CommonSectionHeaderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_update_schedule_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_spacer_middle"
            android:paddingRight="@dimen/common_spacer_middle"
            android:text="@string/app_update_schedule_item"
            />

    </LinearLayout>
</android.support.v7.widget.CardView>