<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_spacer_x_small"
        android:paddingRight="@dimen/common_spacer_x_small"
        >

        <LinearLayout
            android:id="@+id/fragment_initialize_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_spacer_x_small"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_tutorial_initialize_progress"
                android:textSize="18sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_initialize_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_spacer_middle"
            android:layout_marginRight="@dimen/common_spacer_middle"
            android:text="@string/app_tutorial_initialize_complete"
            android:visibility="gone"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/app_theme_base"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                style="@style/CommonSectionHeaderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tutorial_welcome_label"
                />

            <include
                layout="@layout/tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacer_x_small"
                />

            <TextView
                style="@style/CommonSectionHeaderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tutorial_initialize_about"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacer_middle"
                android:padding="@dimen/common_spacer_middle"
                android:text="@string/common_send_feedback_description"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/common_spacer_x_small"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_spacer_x_small"
                    android:text="@string/common_twitter_official_account_label"
                    />

                <TextView
                    android:id="@+id/twitter_official_account_screen_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_twitter_official_account_screen_name"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/common_spacer_x_small"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/common_spacer_x_small"
                    android:text="@string/common_twitter_official_hash_tag_label"
                    />

                <TextView
                    android:id="@+id/twitter_official_hash_tag_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_twitter_official_hash_tag_name"
                    />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>